related to #1851 fixed succes message in dark mode

--- a/admin/themes/default/css/components/general.css
+++ b/admin/themes/default/css/components/general.css
@@ -301,8 +301,6 @@ Info
 }
 
 .info-message {
-    color: #0a0;
-    background-color:#c2f5c2;
     display: none;
 }
 
